# Verge-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  InputHandler.h  LICENSE  README.md  build.ps1  conventions.md  run.ps1
ext/stb_image/: LICENSE.txt
src/: Camera.cpp  Camera.hpp  Core.cpp  ErrorCodes.h  Example.cpp  FPSManager.cpp  FPSManager.h  FpsManager.hpp  GlfwManager.cpp  GlfwManager.hpp  Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  InputManager.hpp  Log.cpp  Log.hpp  LogCodes.hpp  LogManager.cpp  LogManager.h  LogManager.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Vehicle.cpp  Vehicle.hpp  VehicleCore.cpp  VehiclePhysics.cpp  VergeEngine.cpp  VulkanManager.cpp  VulkanManager.h  VulkanManager.hpp  WindowManager.cpp  WindowManager.hpp  definitions.h  definitions.hpp  (+3 more)
src/actors/ground/: Ground.hpp
src/actors/prop/: Prop.cpp  Prop.hpp
src/actors/surface/: Surface.cpp  Surface.hpp
src/actors/trigger/: Trigger.cpp  Trigger.hpp
src/actors/vehicle/: Vehicle.hpp  VehicleCore.cpp  VehicleGraphics.cpp  VehiclePhysics.cpp
src/client/: AudioManager.cpp  AudioManager.hpp  Client.cpp  Client.hpp  FpsManager.cpp  FpsManager.hpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  UI.cpp  UI.hpp  WindowManager.cpp  WindowManager.hpp
src/client/renderer/: Renderer.hpp  RendererHelpers.cpp  RendererInit.cpp  RendererInitDescriptors.cpp  RendererInitPipelines.cpp  RendererModels.cpp  RendererRuntime.cpp  RendererTextures.cpp  RendererUI.cpp
src/client/renderer/shaders/: post.frag  post.vert  shader.frag  shader.vert  shadow.vert  ui.frag  ui.vert
src/core/: Core.cpp  Log.cpp  LogCodes.hpp
src/mesh/: Mesh.cpp  Mesh.hpp
src/renderer/: AudioManager.cpp  AudioManager.hpp  FpsManager.cpp  FpsManager.hpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  VulkanManager.cpp  VulkanManager.hpp  WindowManager.cpp  WindowManager.hpp
src/renderer/shaders/: shader.frag  shader.vert
src/rendering/: Camera.cpp  Camera.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  VulkanManager.cpp  VulkanManager.hpp
src/scene/: Camera.cpp  Camera.hpp  Controller.hpp  Environment.hpp  HandleFactory.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  SceneActors.cpp  SceneCore.cpp  Trigger.cpp  Trigger.hpp
src/scene/actors/: Ground.hpp  Prop.cpp  Prop.hpp  Surface.hpp  Trigger.cpp  Trigger.hpp  Vehicle.hpp  VehicleCore.cpp  VehicleGraphics.cpp  VehiclePhysics.cpp
src/scene/camera/: Camera.cpp  Camera.hpp
src/shaders/: shader.frag  shader.vert
src/shared/: AudioData.hpp  DrawData.hpp  HandleFactory.hpp  Input.cpp  Input.hpp  Log.cpp  Log.hpp  LogCodes.hpp  Mesh.hpp  MeshLoader.hpp  definitions.hpp  local.hpp  version.hpp
src/system/: FpsManager.cpp  FpsManager.hpp  Input.cpp  Input.hpp  WindowManager.cpp  WindowManager.hpp
src/ui/: UI.cpp  UI.hpp  WidgetManager.cpp  WidgetManager.hpp
src/vehicle/: Vehicle.hpp  VehicleCore.cpp  VehicleGraphics.cpp  VehiclePhysics.cpp
